File Copy Based Initial Sync must reconstruct prepared transactions at end

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.2.0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Replication 2021-11-15
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Currently File Copy Based Initial Sync reconstructs prepared transactions with storage open in the temporary directory. This leaves dangling recovery units around, resulting in segfault.

      Additionally we need to reconstruct tenant migration mtabs and set the inReplicationRecovery flag to keep fastcounts correct.

            Assignee:
            Matthew Russotto (Inactive)
            Reporter:
            Matthew Russotto (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: