SERVER-61379 ReconstructPreparedTransactions should not run during startup recovery for initial sync